--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [
     "jquery-plugin"
   ],
-  "main": "./src/animateText.js",
+  "main": "./src/jquery.animateText.js",
   "homepage": "https://github.com/gunderson/animateText",
   "author": {
     "name": "Patrick Gunderson",
